# ddns-route53

./: Cargo.toml  README.md  ddns.timer  flake.nix  package.nix
.github/workflows/: release.yaml  release.yml
assets/: ddns.service  ddns.timer
src/: assets.rs  commands.rs  config.rs  main.rs  prompt.rs  records.rs  service.rs  styles.rs
src/commands/: add.rs  list.rs  remove.rs  setup.rs  update.rs
